assets/site/home.scss
---
---
@charset "utf-8";
@import "base";

body:has(#hero) > header {
    display: none;
}
body > main {
    margin-top: 0;
}
section {
    &:not(:first-of-type, #festival) {
        @include standard-block-behavior;
        margin-top: 3rem;
        margin-bottom: 3rem;
    }
}
section#hero {
    position: relative;
    width: 100vw;
    max-width: 100vw;
    height: 90svh;
    color: #FDE8C3;
    line-height: $minimum-line-height;
    > div {
        width: 100%;
        height: 100%;
        &:last-child {
            z-index: 1;
            top: 0;
            left: 0;
        }
    }
    img {
        object-fit: cover;
        object-position: 75% 55%;
    }
    .logo {
        position: absolute;
        top: 0;
        left: 0;

        background: linear-gradient(to bottom right, transparent 25%, #277C8FC0),
            linear-gradient(to bottom left, transparent 25%, #24A699F0),
            linear-gradient(to bottom, transparent 25%, #{$brand-blue}80);
        background-blend-mode: multiply;
        -webkit-backdrop-filter: blur(2px);
        backdrop-filter: blur(2px);

        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: min-content;
        align-content: center;
        gap: .3rem;

        width: 50%;
        padding: 0 1.5rem 0 $minimum-side-padding;
        @include breakpoint(mobile) {
            width: 100%;
            padding-right: $minimum-mobile-side-padding;
            padding-left: $minimum-mobile-side-padding;
            justify-items: center;
            background: linear-gradient(to bottom right, transparent 25%, #277C8FD0),
                linear-gradient(to bottom left, transparent 25%, #24A699D0),
                radial-gradient(circle,  transparent, #{$brand-blue}80);
            grid-template-rows: unset;
        }

        --home-logo-dome: #FDE8C3;
        --home-logo-amalfi: #FDE8C3;
        --home-logo-coast: #{$brand-yellow};
        --home-logo-festival: #{$brand-yellow};

        #logo-container {
            padding-top: .5rem;
            display: flex;
            justify-content: flex-end;
            @include breakpoint(mobile) {
                 width: min(50svh,calc(100% - 1.5rem));
            }
        }
        #svg-container {
            display: flex;
            width: min(26rem, 100%, 55svh);
            justify-content: flex-end;
            height: 100%;
            translate: 3.7%;
            svg {
                aspect-ratio: .85;
                width: 100%;
            }

            @include breakpoint(mobile) {
                width: 100%;
                height: auto;
                translate: 0%;
            }
        }
    }
    #festival-edition {
        text-align: right;
        line-height: 1;
        padding-top: .5rem;
        padding-bottom: .5em;
        font-size: min(1.8rem, max(1rem, 4vh));
        @include breakpoint(mobile) {
            padding-right: 0;
            font-size: min(3rem, max(1rem, 4vh));
        }
    }
    #hero-links {
        text-align: right;
        padding-bottom: 1rem;
        font-size: min(4vw, 4vh);
        font-weight: 600;
        letter-spacing: .08em;
        translate: .08em;
        @include breakpoint(mobile) {
            text-align: center;
        }
        text-transform: uppercase;
        a, span {
            line-height: $minimum-line-height;
            font-size: min(1.1rem, max(.8rem, 3.2vh));
            @include breakpoint(mobile) {
                font-size: min(1.5rem, max(.8rem, 3.2vh));
            }
            color: $brand-lighter-yellow;
            text-decoration: none;
            opacity: 1;
        }

        > * {
            display: inline-block;
        }
        > * ~ * {
            &:before {
                content: "•";
                padding: 0 .5em;
                font-size: min(1.1rem, max(.8rem, 3.2vh));
                @include breakpoint(mobile) {
                    font-size: min(1.5rem, max(.8rem, 3.2vh));
                }
            }
        }
    }
}

section#festival {
    padding-top: 3rem;
    padding-bottom: 3rem;

    @include breakpoint(mobile) {
        > img:first-child {
            filter: blur(1px);
        }
    }

    .inset-container {
        @include standard-block-behavior;
    }

    .content-container {
        border-radius: 2rem;
        background-color: rgba(255, 255, 255, .8);
        @include backdrop-filter;
        padding: 3rem 1rem;

        > div {
            display: flex;
            flex-wrap: wrap;
            align-items: stretch;
            justify-content: space-evenly;
            text-align: center;
            padding-top: 1rem;
            gap: 4rem 2rem;
            @include breakpoint(tablet) {
                column-gap: 1rem;
            }

            > div {
                display: flex;
                flex-direction: column;
                align-items: center;

                > :nth-child(2) {
                    flex-grow: 2;
                }
            }
        }
        img {
            width: 16rem;
            border: $border-style;
            border-radius: $border-radius-large;
            aspect-ratio: 1;
            object-fit: cover;
        }
        .buttons {
            display: flex;
            gap: 1rem;
            justify-content: center;
            margin-top: .6rem;
        }
        .button {
            display: block;
        }
        h3 {
            margin-top: .3rem;
        }
        ul {
            list-style-type: none;
            padding-left: 0;
        }
        li {
            line-height: $minimum-line-height;
            margin-top: .3rem;
        }
        a {
            text-decoration: none;
            &:hover img {
                border-color: $brand-light-blue;
            }
        }
    }

    h2 {
        text-align: center;
        text-transform: uppercase;
        font-size: 2em;
        margin: 0 0 2rem;
    }
    h3 {
        font-size: 1.25em;
        margin: 0
    }

}

section#sponsors {
    background-color: $background-color;
    h2, h3 {
        margin-top: 3rem;
        text-align: center;
    }
    .sponsor-gallery {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-around;
        align-items: center;
        gap: 1em;
        padding-left: 5.85rem;
        padding-right: 5.85rem;
        @include breakpoint(tablet) {
            padding-left: 0;
            padding-right: 0;
        }
        @include breakpoint(mobile) {
            column-gap: .5em;
            justify-content: center;
        }
        > div {
            display: flex;
            align-items: center;
            gap: .8em;
            div {
                width: 7.5em;
                line-height: $minimum-line-height;
                font-size: .9em;
            }
        }
    }
    img {
        mix-blend-mode: darken;
        max-height: 4rem;
        @include breakpoint(mobile) {
            max-height: 3.5rem;
        }
        justify-self: center;
    }
}

